force-app/main/default/objects/Case_Object_Picklist_Setup__mdt/Case_Object_Picklist_Setup__mdt.object-meta.xml
<CustomObject>
    <description>NICC-063942; Allows for creating custom picklist choice sets for use in the Flows</description>
    <label>Case Object Flow Picklist Setup</label>
    <pluralLabel>Case Object Flow Picklist Setup</pluralLabel>
</CustomObject>