force-app/main/default/objects/Case_Object_Picklist_Setup__mdt/fields/AH_Priority__c.field-meta.xml
<CustomField>
    <fullName>AH_Priority__c</fullName>
    <description>NICC-######; Used to populate a picklist in a Flow called &quot;Case - TS Case Creation Flow&quot;. Populates the field called &quot;Priority&quot; on the screen called &quot;CaseCreationScreen&quot;</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <default>true</default>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>