force-app/main/default/objects/Case_Object_Picklist_Setup__mdt/fields/AH_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>AH_ProductFamily__c</fullName>
    <businessOwnerUser>kcilley@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-064430; used in the Flow called “Case - Create Oppty Close Case” to show Product Family values</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Media Solutions</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>Reservation Solutions</fullName>
            </value>
            <value>
                <fullName>Sales and Catering</fullName>
            </value>
            <value>
                <fullName>Service Optimization</fullName>
            </value>
            <value>
                <fullName>Web Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>