force-app/main/default/objects/Case_Object_Picklist_Setup__mdt/fields/AH_PSCaseProduct__c.field-meta.xml
<CustomField>
    <fullName>AH_PSCaseProduct__c</fullName>
    <description>NICC-063942; Used to populate a picklist in a Flow called &quot;Case - PS Escalations Case Creation&quot;. Populates the field called &quot;Product&quot; on the screen.</description>
    <label>PS Case Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Property Management Products</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Catering</fullName>
            </value>
            <value>
                <fullName>Service Optimization</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Distribution &amp; Diagramming</fullName>
                <isActive>false</isActive>
                <label>Distribution &amp; Diagramming</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>